--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -406,9 +406,27 @@
     <Content Include="home.aspx" />
     <Content Include="images\buttons\call.png" />
     <Content Include="images\buttons\done.png" />
-    <Content Include="images\buttons\right.png" />
-    <Content Include="images\buttons\left.png" />
+    <Content Include="images\buttons\Next.png" />
+    <Content Include="images\buttons\Previous.png" />
+    <Content Include="images\buttons\recall.png" />
     <Content Include="images\default-image.jpg" />
+    <Content Include="images\icons\Add.png" />
+    <Content Include="images\icons\cancel.png" />
+    <Content Include="images\icons\delete.png" />
+    <Content Include="images\icons\department.png" />
+    <Content Include="images\icons\description.png" />
+    <Content Include="images\icons\Edit.png" />
+    <Content Include="images\icons\employee.png" />
+    <Content Include="images\icons\employeeid.png" />
+    <Content Include="images\icons\filedelete.png" />
+    <Content Include="images\icons\logout.png" />
+    <Content Include="images\icons\name.png" />
+    <Content Include="images\icons\Password.png" />
+    <Content Include="images\icons\register.png" />
+    <Content Include="images\icons\reports.png" />
+    <Content Include="images\icons\select.png" />
+    <Content Include="images\icons\Video.png" />
+    <Content Include="images\icons\videofile.png" />
     <Content Include="images\logo2.png" />
     <Content Include="images\pupback.jpg" />
     <Content Include="images\puppq.jpg" />
@@ -465,9 +483,10 @@
     <Compile Include="Controllers\ButtonsController.cs" />
     <Compile Include="Controllers\ImageController.cs" />
     <Compile Include="Controllers\QueueController.cs" />
+    <Compile Include="Controllers\QueueReportsController.cs" />
     <Compile Include="Controllers\QueueTicketController.cs" />
     <Compile Include="Controllers\QueueTicketDoneController.cs" />
-    <Compile Include="Controllers\ReportsController.cs" />
+    <Compile Include="Controllers\RecallController.cs" />
     <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
