--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -403,36 +403,17 @@
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Global.asax" />
-    <Content Include="images\buttons\call.png" />
-    <Content Include="images\buttons\done.png" />
-    <Content Include="images\buttons\Next.png" />
-    <Content Include="images\buttons\Previous.png" />
-    <Content Include="images\buttons\recall.png" />
-    <Content Include="images\default-image.jpg" />
-    <Content Include="images\icons\Add.png" />
-    <Content Include="images\icons\cancel.png" />
-    <Content Include="images\icons\date.png" />
-    <Content Include="images\icons\delete.png" />
-    <Content Include="images\icons\department.png" />
-    <Content Include="images\icons\description.png" />
-    <Content Include="images\icons\Edit.png" />
-    <Content Include="images\icons\employee.png" />
-    <Content Include="images\icons\employeeid.png" />
-    <Content Include="images\icons\filedelete.png" />
-    <Content Include="images\icons\logout.png" />
-    <Content Include="images\icons\name.png" />
-    <Content Include="images\icons\Password.png" />
-    <Content Include="images\icons\register.png" />
+    <Content Include="images\icons\dashboard.png" />
     <Content Include="images\icons\reports.png" />
-    <Content Include="images\icons\select.png" />
-    <Content Include="images\icons\Video.png" />
-    <Content Include="images\icons\videofile.png" />
-    <Content Include="images\logo2.png" />
-    <Content Include="images\pupback.jpg" />
-    <Content Include="images\puppq.jpg" />
-    <Content Include="images\qrcode.png" />
+    <Content Include="images\icons\logout.png" />
+    <Content Include="images\icons\idgenerator.png" />
+    <Content Include="images\icons\student.png" />
+    <Content Include="images\icons\attendance.png" />
+    <Content Include="images\logomnhs.png" />
+    <Content Include="js\dashboard.js" />
     <Content Include="js\student.js" />
     <Content Include="mnhs.aspx" />
+    <Content Include="styles\attendance.css" />
     <Content Include="studentlist.aspx" />
     <Content Include="scripts\ai.0.22.9-build00167.js" />
     <Content Include="scripts\ai.0.22.9-build00167.min.js" />
@@ -453,6 +434,7 @@
     <Content Include="scripts\jquery.signalR.min.js" />
     <Content Include="scripts\realtime.js" />
     <Content Include="scripts\WebSocketManager.js" />
+    <Content Include="attendance.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -502,6 +484,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="UserUtility.cs" />
+    <Compile Include="attendance.aspx.cs">
+      <DependentUpon>attendance.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="attendance.aspx.designer.cs">
+      <DependentUpon>attendance.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
