--- a/WebApplication3/packages.config
+++ b/WebApplication3/packages.config
@@ -5,6 +5,8 @@
   <package id="AuthPackage" version="1.0.2" targetFramework="net461" developmentDependency="true" />
   <package id="bootstrap" version="5.3.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="FubarCoder.RestSharp.Portable.Core" version="4.0.8" targetFramework="net48" />
+  <package id="FubarCoder.RestSharp.Portable.HttpClient" version="4.0.8" targetFramework="net48" />
   <package id="itext" version="8.0.2" targetFramework="net461" />
   <package id="itext.commons" version="8.0.2" targetFramework="net461" />
   <package id="itext7" version="8.0.2" targetFramework="net461" />
@@ -37,7 +39,7 @@
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.3.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.3.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="5.0.0" targetFramework="net461" />
@@ -61,11 +63,16 @@
   <package id="React.Core" version="5.2.12" targetFramework="net461" />
   <package id="React.Web" version="5.2.12" targetFramework="net461" />
   <package id="React.Web.Mvc4" version="5.2.12" targetFramework="net461" />
+  <package id="RestSharp" version="110.2.0" targetFramework="net48" />
+  <package id="RestSharp.Newtonsoft.Json" version="1.5.1" targetFramework="net48" />
+  <package id="RestSharp.Serializers.NewtonsoftJson" version="110.2.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.5" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="7.0.2" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" requireReinstallation="true" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
