--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -428,6 +428,9 @@
     <Content Include="images\icons\dashboard\day.png" />
     <Content Include="images\icons\dashboard\timeout.png" />
     <Content Include="images\icons\dashboard\warning.png" />
+    <Content Include="images\icons\download.png" />
+    <Content Include="images\icons\export.png" />
+    <Content Include="images\icons\printer.png" />
     <Content Include="images\icons\reports.png" />
     <Content Include="images\icons\logout.png" />
     <Content Include="images\icons\idgenerator.png" />
@@ -455,6 +458,7 @@
     <Content Include="scripts\bootstrap.js" />
     <Content Include="scripts\bootstrap.min.js" />
     <Content Include="styles\custom.css" />
+    <Content Include="reports.aspx" />
     <None Include="scripts\jquery-3.7.1.intellisense.js" />
     <Content Include="scripts\jquery-3.7.1.js" />
     <Content Include="scripts\jquery-3.7.1.min.js" />
@@ -472,6 +476,7 @@
     <Content Include="generateid.aspx" />
     <Content Include="styles\idgenerator.css" />
     <Content Include="styles\login.css" />
+    <Content Include="styles\reports.css" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -482,15 +487,12 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AttendanceController.cs" />
     <Compile Include="Controllers\parentController.cs" />
-    <Compile Include="Controllers\ImageController.cs" />
     <Compile Include="Controllers\mnhsController.cs" />
     <Compile Include="Controllers\generateidController.cs" />
-    <Compile Include="Controllers\QueueTicketDoneController.cs" />
+    <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Controllers\Employeecontroller.cs" />
-    <Compile Include="Controllers\EmployeeDataAccess.cs" />
     <Compile Include="login.aspx.cs">
       <DependentUpon>login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -505,7 +507,6 @@
     <Compile Include="mnhs.aspx.designer.cs">
       <DependentUpon>mnhs.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Models\Employee.cs" />
     <Compile Include="studentlist.aspx.cs">
       <DependentUpon>studentlist.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -513,12 +514,6 @@
     <Compile Include="studentlist.aspx.designer.cs">
       <DependentUpon>studentlist.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Models\QueueReport.cs" />
-    <Compile Include="Models\reportfilter.cs" />
-    <Compile Include="Models\Student.cs" />
-    <Compile Include="Models\User.cs" />
-    <Compile Include="Models\Videos.cs" />
-    <Compile Include="Models\VideoSelectionRequest.cs" />
     <Compile Include="program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -543,6 +538,13 @@
     </Compile>
     <Compile Include="generateid.aspx.designer.cs">
       <DependentUpon>generateid.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="reports.aspx.cs">
+      <DependentUpon>reports.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="reports.aspx.designer.cs">
+      <DependentUpon>reports.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -613,8 +615,10 @@
   <ItemGroup>
     <Folder Include="api\" />
     <Folder Include="App_Data\" />
+    <Folder Include="Models\" />
     <Folder Include="Views\admin\" />
     <Folder Include="Views\Purpose\" />
+    <Folder Include="Views\Student\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
